Assembly step added

--- a/src/main/resources/deployment/Dockerfile
+++ b/src/main/resources/deployment/Dockerfile
@@ -1,7 +1,7 @@
 #FROM anapsix/alpine-java
 FROM openjdk:8
 
-ADD target/scala-2.11/k8s-sample-app_2.11-0.1.jar /
+ADD target/scala-2.11/k8s-sample-app-assembly-0.1.jar /
 
 # com.ethoca.estreams.ingest.EthocaStreamsAlertProducer
-CMD java -jar /k8s-sample-app_2.11-0.1.jar
+CMD java -jar /k8s-sample-app-assembly-0.1.jar
